Fix issue where posts without a start/end time would always show as ENDED
Fixes https://github.com/Hylozoic/hylo-evo/issues/1025

Also cleanup display of post start and end times to be easier to read - don't uppercase text, better syntax.
Also if a post was "completed" before it ended show the end date as the date it was completed
Also tweak styling of post headers to look better - better positioning for spacer before announcement icon, and less whitespace below post header, calendar date doesnt overlap post header on mobile

--- a/src/components/PostCard/PostBody/PostBody.scss
+++ b/src/components/PostCard/PostBody/PostBody.scss
@@ -158,7 +158,7 @@
   }
 
   .calendarDate {
-    margin-top: -40px;
+    margin-top: -20px;
 
     > div {
       background-color: rgba(255, 255, 255, 1);
